src/objects/Clinical_Apt_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Apt Histories</relationshipLabel>
        <relationshipName>Clinical_Apt_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Reason__c</fullName>
        <formula>TEXT(Cancel_Reason__c) + 
TEXT(Reschedule_Reason__c) + 
TEXT( Delete_Reason__c)</formula>
        <label>Action Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Center Request</fullName>
                </value>
                <value>
                    <fullName>Conflict with Schedule</fullName>
                </value>
                <value>
                    <fullName>Emergency/Sick</fullName>
                </value>
                <value>
                    <fullName>Family Conference</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Cost</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Distance</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Insurance</fullName>
                </value>
                <value>
                    <fullName>Not Interested- Bad Review</fullName>
                </value>
                <value>
                    <fullName>Patient Request</fullName>
                </value>
                <value>
                    <fullName>Reassign Doctor</fullName>
                </value>
                <value>
                    <fullName>Schedule Management</fullName>
                </value>
                <value>
                    <fullName>Transportation Issues</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
                <value>
                    <fullName>GLO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Clinical Apt Histories</relationshipLabel>
        <relationshipName>Clinical_Apt_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delete_Reason__c</fullName>
        <label>Delete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor Request</fullName>
                </value>
                <value>
                    <fullName>PEC Sick/Schedule</fullName>
                </value>
                <value>
                    <fullName>Weather Closures</fullName>
                </value>
                <value>
                    <fullName>Center Request</fullName>
                </value>
                <value>
                    <fullName>Traveler/master Schedule Update</fullName>
                </value>
                <value>
                    <fullName>Schedule Management</fullName>
                </value>
                <value>
                    <fullName>GLO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incomplete_Reason__c</fullName>
        <label>Incomplete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Insufficient Healing</fullName>
                </value>
                <value>
                    <fullName>Medical Reason</fullName>
                </value>
                <value>
                    <fullName>Mini-Prosth</fullName>
                </value>
                <value>
                    <fullName>Non-candidate</fullName>
                </value>
                <value>
                    <fullName>Patient Conflict</fullName>
                </value>
                <value>
                    <fullName>Staged Appointment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_POT_Apt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT Apt</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Clinical Apt Histories</relationshipLabel>
        <relationshipName>Clinical_Apt_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reschedule_Reason__c</fullName>
        <label>Reschedule Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conflict with Schedule</fullName>
                </value>
                <value>
                    <fullName>Emergency/Sick</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Schedule Management</fullName>
                </value>
                <value>
                    <fullName>Transporatation Issues</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rescheduled_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rescheduled From</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Clinical Apt Histories (Rescheduled From)</relationshipLabel>
        <relationshipName>Clinical_Apt_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clinical Apt History</label>
    <nameField>
        <displayFormat>AH-{0000}</displayFormat>
        <label>Clinical Apt History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Apt Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>